# diplopod

./: .gitignore  Cargo.toml  Justfile  LICENSE-MIT  README.md  justfile
src/: components.rs  events.rs  game.rs  highscore.rs  highscores.rs  main.rs  menu.rs  over_menu.rs  resources.rs  setting_menu.rs  spawner.rs
src/game/: antidote.rs  components.rs  diplopod.rs  events.rs  fading_text.rs  food.rs  poison.rs  resources.rs  superfood.rs  wall.rs
src/game/systems/: control.rs  graphics.rs  mod.rs  player_input.rs  setup.rs
src/systems/: change_color.rs  eat.rs  fade_text.rs  game.rs  game_over.rs  graphics.rs  growth.rs  limit_immunity.rs  mod.rs  move_antidote.rs  movement.rs  player_input.rs  position_translation.rs  rotate_superfood.rs  setup.rs  show_message.rs  size_scaling.rs  spawn_food.rs  spawner.rs
