[package]
name = "diplopod"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tehlers/diplopod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 'z'

[dependencies]
anyhow = "1"
bevy = "0.17.2"
directories = "6"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"
